docs-archive/apache-airflow-providers-tableau/5.6.1/_sources/_api/airflow/providers/tableau/operators/tableau/index.rst.txt
airflow.providers.tableau.operators.tableau
===========================================

.. py:module:: airflow.providers.tableau.operators.tableau


Attributes
----------

.. autoapisummary::

   airflow.providers.tableau.operators.tableau.RESOURCE_CONFLICT_ERROR_CODE
   airflow.providers.tableau.operators.tableau.RESOURCES_METHODS


Classes
-------

.. autoapisummary::

   airflow.providers.tableau.operators.tableau.TableauOperator


Module Contents
---------------

.. py:data:: RESOURCE_CONFLICT_ERROR_CODE
   :value: '409093'


.. py:data:: RESOURCES_METHODS

.. py:class:: TableauOperator(*, resource, method, find, match_with = 'id', site_id = None, blocking_refresh = True, check_interval = 20, timeout = None, exponential_backoff = False, max_check_interval = None, incremental_refresh = False, skip_on_conflict = False, tableau_conn_id = 'tableau_default', **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   Execute a Tableau API Resource.

   https://tableau.github.io/server-client-python/docs/api-ref

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:TableauOperator`

   :param resource: The name of the resource to use.
   :param method: The name of the resource's method to execute.
   :param find: The reference of resource that will receive the action.
   :param match_with: The resource field name to be matched with find parameter.
   :param site_id: The id of the site where the workbook belongs to.
   :param blocking_refresh: By default will be blocking means it will wait until it has finished.
   :param check_interval: time in seconds that the job should wait in
       between each instance state checks until operation is completed
   :param timeout: maximum total time in seconds to wait for a blocking refresh to finish before
       giving up with a ``TimeoutError``. ``None`` (the default) waits indefinitely until the job
       leaves the PENDING state.
   :param exponential_backoff: when ``True`` the wait between status checks grows by 50% each
       time, starting from ``check_interval``, instead of staying fixed.
   :param max_check_interval: maximum interval in seconds between two consecutive status checks
       when ``exponential_backoff`` is enabled. ``None`` leaves the growth uncapped.
   :param incremental_refresh: Whether to perform an incremental refresh instead of a full refresh.
       Only applies to datasource and workbook refresh operations. Defaults to False (full refresh).
   :param skip_on_conflict: When ``True``, treat a Tableau ``409093 Resource Conflict`` error
       while triggering a refresh, or while running an extract refresh task, as a skipped task
       instead of a failure. Raised when a refresh/run for the same resource is already queued
       or running. Applies to ``method="refresh"`` and to ``method="run"`` on ``tasks``.
       Defaults to ``False``, so the conflict fails the task as before.
   :param tableau_conn_id: The :ref:`Tableau Connection id <howto/connection:tableau>`
       containing the credentials to authenticate to the Tableau Server.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('find', 'match_with')



   .. py:attribute:: resource


   .. py:attribute:: method


   .. py:attribute:: find


   .. py:attribute:: match_with
      :value: 'id'



   .. py:attribute:: check_interval
      :value: 20



   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: exponential_backoff
      :value: False



   .. py:attribute:: max_check_interval
      :value: None



   .. py:attribute:: site_id
      :value: None



   .. py:attribute:: blocking_refresh
      :value: True



   .. py:attribute:: incremental_refresh
      :value: False



   .. py:attribute:: skip_on_conflict
      :value: False



   .. py:attribute:: tableau_conn_id
      :value: 'tableau_default'



   .. py:method:: execute(context)

      Execute the Tableau API resource and push the job id or downloaded file URI to xcom.

      :param context: The task context during execution.
      :return: the id of the job that executes the extract refresh or downloaded file URI.



